--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
@@ -6,13 +6,14 @@
     <ion-title>
       <div class="title">{{titre}}</div>
       <div class="subtitle">{{soustitre}}</div>
+      <ion-badge>{{'pompiste'}}</ion-badge>
     </ion-title>
     <ion-buttons slot="end">
       <ion-chip>
         <ion-avatar>
           <img src="assets/images/icon_test_user.jpg">
         </ion-avatar>
-        <ion-label>{{utilisateur.nom}}</ion-label>
+        <ion-label>{{utilisateur? utilisateur.full_name : 'Default Name'}}</ion-label>
       </ion-chip>
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
