--- a/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.css
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.css
@@ -9,7 +9,15 @@
 .menu-item .icon-image {
   width: 100%;
   height: 40%;
-  background: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu-item .icon-image ion-icon {
+  width: 10rem;
+  height: 10rem;
+  color: blakc;
 }
 .menu-item .name-menu {
   width: 100%;
