--- a/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.html
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.html
@@ -1,8 +1,10 @@
 <!-- Template par defaut des menu -->
 <ng-container *ngIf="template === 'DEFAULT'">
-  <ion-card class="menu-item">
-    <div class="icon-image"></div>
-    <div class="name-menu">{{title}}</div>
+  <ion-card class="menu-item" (click)="goToMenuPage()">
+    <div class="icon-image">
+      <ion-icon [name]="menu.icon"></ion-icon>
+    </div>
+    <div class="name-menu">{{menu.title}}</div>
   </ion-card>
 </ng-container>
 
