--- a/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.scss
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.scss
@@ -8,7 +8,15 @@
     .icon-image {
         width: 100%;
         height: 40%;
-        background: red;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        ion-icon {
+            width: 10rem;
+            height: 10rem;
+            color: blakc
+        }
     }
     .name-menu {
         width: 100%;
