--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,21 @@
 // @import 'themes/bootstrap';
 // @import 'themes/dark';
 // @import 'assets/icons';
+
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Mukta:700');
+@import url('https://fonts.googleapis.com/css?family=Quattrocento');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Arapey:400italic');  
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:200');
+@import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');  
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700|Work+Sans:100,200,300,400,500,600');
+@import url('https://fonts.googleapis.com/css?family=Allerta+Stencil');
+@import url("https://fonts.googleapis.com/css?family=Bree+Serif");
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,800');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
+
