--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,10 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import "./assets/styles/custum.style.scss";
+
+.container-log-page[_ngcontent-qmx-c1] ion-item[_ngcontent-qmx-c1] {
+    border-color: #e2dfdf;
+    border: 1px solid #e2dfdf !important;
+    border-radius: 5px;
+    margin: 1rem;
+}
