--- a/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.scss
+++ b/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.scss
@@ -11,7 +11,8 @@
         max-width: 35rem;
         padding: 5%;
         position: relative;
-        overflow: hidden;
+        overflow: scroll;
+        background: #e3e3e3;
         ion-item {
             margin-top: 1%;
         }
