--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
@@ -5,4 +5,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    .cadran-buttn {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        .cadran {
+            width: calc(100% / 6);
+            height: 50px;
+        }
+    }
 }
+
