--- a/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.css
+++ b/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.css
@@ -5,16 +5,15 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: blue;
   padding: 5%;
 }
 .container .form-block {
   width: 100%;
   max-width: 35rem;
-  background: red;
   padding: 5%;
   position: relative;
-  overflow: hidden;
+  overflow: scroll;
+  background: #e3e3e3;
 }
 .container .form-block ion-item {
   margin-top: 1%;
@@ -33,4 +32,9 @@
 }
 .container .form-block ion-buttons ion-button {
   width: calc(50% - 5px);
+}
+.container .row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
