--- a/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.scss
@@ -21,7 +21,9 @@
             font-size: 1.2rem;
         }
     }
-    ion-button{ 
-        background: #0055a4;
-    }
+    ion-button{
+        background-color: none !important;
+        border-radius: 5px;
+}
+
 }
