--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
@@ -12,23 +12,35 @@
   <div class="container">
     <form>
       <ion-card>
-        <ion-item lines="none">
-          <ion-label>Ancien Password:</ion-label>
-          <ion-input [(ngModel)]="oldPassword" type="password" name="oldPassword"></ion-input>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Nouveau Password :</ion-label> 
-          <ion-input [(ngModel)]="newPassword" type="password" name="newPassword"></ion-input>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label>Retapez le Password :</ion-label>
-          <ion-input [(ngModel)]="newcPassword" type="password" name="newcPassword"></ion-input>
-        </ion-item>
-        <ion-buttons>
-          <ion-button (click)="cancelThisOpeartion()" >Annuler</ion-button>
-          <ion-button (click)="modifyPasswor()" >Sauvegarder</ion-button>
-        </ion-buttons>
+        <div>
+            <ion-label>Ancien Password:</ion-label>
+            <div class="form-group">
+              <ion-input [(ngModel)]="oldPassword" type="password" name="oldPassword"></ion-input>
+            </div>
+          </div>
+          <div>
+            <ion-label>Nouveau Password :</ion-label> 
+            <div class="form-group">
+              <ion-input [(ngModel)]="newPassword" type="password" name="newPassword"></ion-input>
+            </div>
+            
+          </div>
+          <div>
+            <ion-label>Retapez le Password :</ion-label>
+            <div class="form-group">
+              <ion-input [(ngModel)]="newcPassword" type="password" name="newcPassword" placeholder=""></ion-input>
+            </div>
+          </div>
+          <div class="row">
+            <div>
+              <div class="button" (click)="cancelThisOpeartion()">Annuler</div>
+            </div>
+            <div>
+              <div class="button" (click)="modifiedPasswor()">Sauvegarder</div>
+            </div>
+          </div>
       </ion-card>
+        
     </form>
   </div>
 </ion-content>
