--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
@@ -11,16 +11,24 @@ ion-content {
     justify-content: center;
     align-items: center;
     ion-card {
+        padding: 2rem;
+        width: 100%;
         ion-buttons {
             width: 100%;
             justify-content: center;
             ion-button {
-                width: 10rem;
+                
                 background: darkcyan;
                 color: white;
                 font-family: Lato;
             }
         }
         padding-bottom: 10px;
+    }
+
+    .button {
+        background: darkcyan;
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 }
