--- a/src/global.scss
+++ b/src/global.scss
@@ -33,3 +33,80 @@
     border-radius: 5px;
     margin: 1rem;
 }
+
+
+.button{
+    background-color: #0055a4;
+    border-radius: 5px;
+    padding: 0.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #e2dfdf;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
+.button-native{
+    background-color: none !important;
+}
+.form-group{ 
+    border-color: #e2dfdf;
+        border: 1px solid #e2dfdf !important;
+        border-radius: 5px;
+        margin: 1rem;
+        margin-left: 0;
+        min-width: 0.2rem;
+        ::placeholder, ::content{ 
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: dimgrey;
+            font-size: 0.8rem;
+            padding: 1rem;
+            text-align: left;
+        }
+}
+
+.title{ 
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+}
+.row{ 
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+ion-label{
+    font-size: 0.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+}
+h4{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+}
+
+h5{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+}
+
+.button-box {
+    width: 80px;
+    height: 80px;
+    background: white;
+    margin-left: 5px;
+    color: dimgray;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: dimgray 1px 0px 2px 0px;
+    border-radius: 2px;
+    cursor: pointer;
+}
