--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
@@ -2,6 +2,7 @@
 
 <ion-content>
   <div class="container">
+      <h5>Définir votre code pin</h5>
     <div class="cadran-buttn">
       <div class="cadran"></div>
       <div class="cadran"></div>
@@ -33,8 +34,7 @@
       </div>
     </div>
     <div class="button-action">
-      <ion-button (click)="annulerAction()">ANNULER</ion-button>
-      <ion-button (click)="validerNouveauPin()">SAUVEGARDER</ion-button>
+      <div class="button" (click)="validerNouveauPin()">VALIDER</div>
     </div>
   </div>
 </ion-content>
