--- a/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.html
@@ -2,20 +2,20 @@
   <div class="container-log-page">
     <ion-card>
       <ion-card-header>
-        <ion-card-title> SE LOGGER</ion-card-title>
-        <ion-card-subtitle>dash - dash</ion-card-subtitle>
+        <div class="title">Connexion</div>
       </ion-card-header>
       <ion-card-content>
         <form>
-          <ion-item>
-            <ion-label>Login:</ion-label>
-            <ion-input type="text" name="login" [(ngModel)]="login"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label>Mot de Passe:</ion-label>
-            <ion-input type="password" name="password" [(ngModel)]="password"></ion-input>
-          </ion-item>
-          <ion-button expand="full" (click)="seConnecter()">Se Connecter</ion-button>
+          <div class="form-group">
+            <ion-input type="text" name="login" [(ngModel)]="login" placeholder="Login"></ion-input>
+          </div>
+          <div class="form-group">
+            <ion-input type="password" name="password" [(ngModel)]="password" placeholder="Mot de passe"></ion-input>
+          </div>
+          <div class="form-group">
+            <div class="button" ion-button expand="full" (click)="seConnecter()">Connexion</div>
+          </div>
+          
         </form>
       </ion-card-content>
     </ion-card>
