--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.html
@@ -1,11 +1,39 @@
-
-
 <ion-content>
-  <div class="container">
-      <div class="text-info">
-          c'est ici quon vas implementer le code Pin 
+    <div class="container">
+        <h5>Entrez votre conde PIN pou continuer.</h5>
+      <div class="cadran-buttn">
+        <div class="cadran"></div>
+        <div class="cadran"></div>
+        <div class="cadran"></div>
+        <div class="cadran"></div>
+        <div class="cadran"></div>
+        <div class="cadran"></div>
       </div>
-      <ion-button (click)="goIntoApplication()">ENTRER DANS L'APPLICATION </ion-button>
-  </div>
-
-</ion-content>
+      <div class="button-carried">
+        <div class="block-3">
+          <div class="button-box" (click)="storeValue(1)">1</div>
+          <div class="button-box" (click)="storeValue(2)">2</div>
+          <div class="button-box" (click)="storeValue(3)">3</div>
+        </div>
+        <div class="block-3">
+          <div class="button-box" (click)="storeValue(4)">4</div>
+          <div class="button-box" (click)="storeValue(5)">5</div>
+          <div class="button-box" (click)="storeValue(6)">6</div>
+        </div>
+        <div class="block-3">
+          <div class="button-box" (click)="storeValue(7)">7</div>
+          <div class="button-box" (click)="storeValue(8)">8</div>
+          <div class="button-box" (click)="storeValue(9)">9</div>
+        </div>
+        <div class="block-3">
+          <div class="button-box">X</div>
+          <div class="button-box" (click)="storeValue(0)">0</div>
+          <div class="button-box">X</div>
+        </div>
+      </div>
+      <div class="button-action">
+        <div class="button" (click)="validerNouveauPin()">VALIDER</div>
+      </div>
+    </div>
+  </ion-content>
+  
