--- a/src/app/VIEWS/PAGES/METIERS/acceuil/acceuil.page.html
+++ b/src/app/VIEWS/PAGES/METIERS/acceuil/acceuil.page.html
@@ -1,16 +1,16 @@
 
 
-<app-header [titre]="'ACCEUIL'" [soustitre]="'le sous-titre de la page'"
+<app-header [titre]="'ACCEUIL'"
   [defaultParenUrl]="'isHome'"></app-header>
 <ion-content>
   <div class="container-menu">
-    <ng-container *ngIf="profil === 2 && listMenuPompiste.length > 0">
-      <ng-container *ngFor="let menu of listMenuPompiste">
+    <ng-container class="sub-menu-item"  *ngIf="profil === 2 && listMenuPompiste.length > 0">
+      <ng-container class="sub-menu-item"  *ngFor="let menu of listMenuPompiste">
         <app-menu [menu]="menu"></app-menu>
       </ng-container>
     </ng-container>
     <ng-container *ngIf="profil === 1 && listMenuChauffeur.length > 0">
-      <ng-container *ngFor="let menu of listMenuChauffeur">
+      <ng-container class="sub-menu-item"  *ngFor="let menu of listMenuChauffeur">
         <app-menu [menu]="menu"></app-menu>
       </ng-container>
     </ng-container>
