--- a/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.scss
+++ b/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.scss
@@ -5,14 +5,13 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 5%;
+    padding: 0.5rem;
+    box-shadow: dimgray 1px 0px 2px 0px;
     .form-block {
         width: 100%;
         max-width: 35rem;
-        padding: 5%;
+        padding: 0.5rem;
         position: relative;
-        overflow: scroll;
-        background: #e3e3e3;
         ion-item {
             margin-top: 1%;
         }
@@ -32,9 +31,25 @@
             }
         }
     }
-    .row{ 
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+
+    ion-select{
+        padding-left: 2rem;
+        padding-right: 3rem;
+        flex-wrap: wrap;
+    }
+
+    .button{
+        background-color: rgb(233, 101, 101);
+        font-size: 0.7rem;
+        font-weight: 500;
+    }
+    .validate{
+        background-color: #0055a4;
+        border-radius: 5px;
+        padding: 0.5rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: #e2dfdf;
+        font-size: 0.8rem;
+        cursor: pointer;
     }
 }
