some update - mise ajourd du Process de changment de pin ::  verifier l'API associer - mise a jour du Process dintroduction du Pin lors de la connextion OK - mise a jour du Process de changement de mot de passe : verifier l'API

--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
@@ -2,14 +2,14 @@
 
 <ion-content>
   <div class="container">
-      <h5>Définir votre code pin</h5>
+      <h5>Nouveau Code PIN</h5>
     <div class="cadran-buttn">
-      <div class="cadran"></div>
-      <div class="cadran"></div>
-      <div class="cadran"></div>
-      <div class="cadran"></div>
-      <div class="cadran"></div>
-      <div class="cadran"></div>
+      <div class="cadran"><div id="checkId1"></div></div>
+      <div class="cadran"><div id="checkId2"></div></div>
+      <div class="cadran"><div id="checkId3"></div></div>
+      <div class="cadran"><div id="checkId4"></div></div>
+      <div class="cadran"><div id="checkId5"></div></div>
+      <div class="cadran"><div id="checkId6"></div></div>
     </div>
     <div class="button-carried">
       <div class="block-3">
@@ -28,13 +28,14 @@
         <div class="button-box" (click)="storeValue(9)">9</div>
       </div>
       <div class="block-3">
-        <div class="button-box">X</div>
+        <div class="button-box" (click)="deleteValue()">DEL</div>
         <div class="button-box" (click)="storeValue(0)">0</div>
         <div class="button-box">X</div>
       </div>
     </div>
     <div class="button-action">
-      <div class="button" (click)="validerNouveauPin()">VALIDER</div>
+      <ion-button [disabled]="buildNewPing.length !== 6" (click)="validerNouveauPin()">VALIDER</ion-button>
+      <ion-button (click)="annulerAction()">ANNULER</ion-button>
     </div>
   </div>
 </ion-content>
