--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 }
 .container .cadran-buttn {
   width: 100%;
@@ -14,10 +15,11 @@
   align-items: center;
 }
 .container .cadran-buttn .cadran {
-  width: 60px;
-  height: 60px;
-  background: red;
-  margin-left: 5px;
+  width: 35px;
+  height: 35px;
+  background: rgba(219, 211, 211, 0.932);
+  margin: 0.5rem;
+  padding: 6px;
 }
 .container .button-carried {
   width: 100%;
@@ -34,26 +36,13 @@
   align-items: center;
   margin-top: 5px;
 }
-.container .button-carried .block-3 .button-box {
-  width: 80px;
-  height: 80px;
-  background: black;
-  margin-left: 5px;
-  color: white;
-  font-size: 35px;
-  text-transform: uppercase;
-  font-family: Lato;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 .container .button-action {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: auto;
 }
 .container .button-action ion-button {
   width: 10rem;
