--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
@@ -15,9 +15,9 @@
         .cadran {
             width: 35px;
             height: 35px;
-            background:#0055a4;
-            border: 6px rgba(219, 211, 211, 0.932) solid;
+            background:  rgba(219, 211, 211, 0.932);
             margin: 0.5rem;
+            padding: 6px;
         }
     }
     .button-carried {
