--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 }
 .container .cadran-buttn {
   width: 100%;
@@ -14,6 +15,39 @@
   align-items: center;
 }
 .container .cadran-buttn .cadran {
-  width: calc(100% / 6);
-  height: 50px;
+  width: 35px;
+  height: 35px;
+  background: rgba(218, 216, 216, 0.932);
+  margin: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+}
+.container .button-carried {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .button-carried .block-3 {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+}
+.container .button-action {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.container .button-action ion-button {
+  width: 10rem;
 }
